--- a/to_do_2.css
+++ b/to_do_2.css
@@ -16,5 +16,8 @@ section.low {
 section.done {
     background-color: black;
     color: cyan;
-    ul text-decoration: line-through;
+    text-decoration: line-through;
     }
+
+h1.done { 
+    text-decoration: none;
