--- a/to_do_2.css
+++ b/to_do_2.css
@@ -1,24 +1,23 @@
-section.high {
+.high {
     background-color: red;
     color: white;
     }
   
-section.medium {
+.medium {
     background-color: orange;
     color: brown;
     }
 
-section.low {
+.low {
     background-color: #666666;
     color: black;
     }
 
-section.done {
+.done {
     background-color: black;
     color: cyan;
     text-decoration: line-through;
+    h1 text-decoration: none;
     }
 
-h1.done { 
-    text-decoration: none;
-    }
+
