--- a/to_do_2.css
+++ b/to_do_2.css
@@ -13,11 +13,10 @@
     color: black;
     }
 
-.done {
+.done h1:not {
     background-color: black;
     color: cyan;
     text-decoration: line-through;
-    h1 text-decoration: none;
     }
 
 
