--- a/to_do_2.css
+++ b/to_do_2.css
@@ -13,7 +13,7 @@
     color: black;
     }
 
-.done h1:not {
+.done {
     background-color: black;
     color: cyan;
     text-decoration: line-through;
