--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@ header {
   text-align: center;
   color:blue;
   font-size:30pt;
+  top:40px;
 }
 h1 {
   color: blue;
@@ -22,6 +23,7 @@ body {
   background-color: blue;
   text-align: center;
   font-size: 15pt;
+  height:30px;
   
   
 }
