--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,8 +29,9 @@ body {
   text-align: center;
   font-size: 15pt;
   height: 30px;
-  width: 90%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
+  margin:0;
   
 }
