--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,17 +14,15 @@ body {
 .nav li {
   display: inline;
 }
-.nav a {
-  text-decoration: none;
-  color: white;
-  background-color: blue;
-}
-
-.nav ul {
-  margin-top:6px;
+nav ul li a {
+ padding: 6px 20px;
+ background-color: blue ;
+ color: white;
+ text-decoration: none;
 }
 .nav {
   position: fixed;
+  padding: 6px 20px;
   background-color: blue;
   text-align: center;
   font-size: 15pt;
@@ -33,5 +31,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin:0;
+  clear: both;
   
 }
