--- a/good.css
+++ b/good.css
@@ -1,15 +1,14 @@
 .nav {
+ position: fixed;
  list-style: none;
  width: 85%;
  margin: 0;
  padding: 6px 20px;
- background-color: #282828;
+ background-color: blue;
  color: white;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
- border-top: 1px solid #282828;
- border-bottom: 4px solid #FF3300;
  font-size: 15pt;
  clear: both;
 }
@@ -18,11 +17,8 @@ nav>ul>li {
 }
 nav ul li a {
  padding: 6px 20px;
- background-color: #282828 ;
+ background-color: blue;
  color: White;
  text-decoration: none;
 }
-nav ul li a:hover {
- background-color: #F8F8F8 ;
- color: #FF3300;
-}
+
