--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,26 +11,26 @@ h1 {
 body {
   background-color: #d0e4fe;
 }
-.nav li {
-  display: inline;
+.nav {
+ position: fixed;
+ list-style: none;
+ width: 85%;
+ margin: 0;
+ padding: 6px 20px;
+ background-color: blue;
+ color: white;
+ text-align: center;
+ margin-left: 7.5%;
+ margin-right: 7.5%;
+ font-size: 15pt;
+ clear: both;
+}
+nav>ul>li {
+ display: inline;
 }
 nav ul li a {
  padding: 6px 20px;
- background-color: blue ;
- color: white;
+ background-color: blue;
+ color: White;
  text-decoration: none;
-}
-.nav {
-  position: fixed;
-  padding: 6px 20px;
-  background-color: blue;
-  text-align: center;
-  font-size: 15pt;
-  height: 30px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin:0;
-  clear: both;
-  
 }
