--- a/to_do_2.css
+++ b/to_do_2.css
@@ -29,4 +29,12 @@ section {
         width: 300px;
 }
 
+#list {
+    height: 300px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blue;
+    
+}
 
