--- a/to_do_2.css
+++ b/to_do_2.css
@@ -37,6 +37,16 @@ section {
     background-color: blue;
     
 }
+
+#input {
+    height: 40px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blue;
+    float: left;
+}
+
 #title {
     text-align: center;
 }
