--- a/to_do_2.css
+++ b/to_do_2.css
@@ -44,6 +44,7 @@ section {
     margin-left: auto;
     margin-right: auto;
     background-color: blue;
+    position: relative;
     
 }
 
@@ -54,6 +55,10 @@ section {
 #task #priority button {
     display: inline;
     float: left;
+    position: absolute;
+    padding-top: 5px;
+    width: 50%;
+    
 }
 label {
     color: gray;
