--- a/priority.css
+++ b/priority.css
@@ -14,3 +14,49 @@
   text-decoration: line-through;
 }
 
+body {
+    background-color: #d0e4fe;
+}
+
+section { 
+        height: 200px;
+        width: 300px;
+}
+
+#listbox {
+    height: 300px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blue;
+    
+}
+
+#list {
+    color: white;
+    list-style-type: none;
+}
+
+#input {
+    height: 40px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blue;
+    
+    
+}
+
+#title {
+    text-align: center;
+}
+
+#task #priority button {
+    display: inline;
+    padding-top: 10px;
+    
+}
+label {
+    color: gray;
+}
+
