--- a/priority.css
+++ b/priority.css
@@ -47,6 +47,9 @@ section {
     margin-left: auto;
     margin-right: auto;
     background-color: blue;
+    margin-top: 5px;
+    margin-botton: 5px;
+
     
     
 }
